--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -360,6 +360,7 @@
 					<Add option="-msse3" />
 					<Add option="-ggdb3" />
 					<Add option="-std=c++03" />
+					<Add option="-fstack-protector-strong" />
 					<Add option="-D_IRR_STATIC_LIB_" />
 					<Add option="-D_DEBUG" />
 					<Add directory="../../include" />
@@ -372,6 +373,7 @@
 				</Compiler>
 				<Linker>
 					<Add option="-fuse-ld=gold" />
+					<Add option="-fstack-protector-strong" />
 					<Add library="GL" />
 					<Add library="Xxf86vm" />
 					<Add library="unwind-x86_64" />
@@ -453,6 +455,8 @@
 			<Add option="-D_IRR_COMPILE_WITH_OPENGL_" />
 		</Compiler>
 		<Unit filename="../../include/CFinalBoneHierarchy.h" />
+		<Unit filename="../../include/COpenGLStateManager.h" />
+		<Unit filename="../../include/COpenGLStateManagerImpl.h" />
 		<Unit filename="../../include/ECullingTypes.h" />
 		<Unit filename="../../include/EDebugSceneTypes.h" />
 		<Unit filename="../../include/EDeviceTypes.h" />
