Added OpenGL class for cube map texture. Decided to include the getSize() method in the IVirtualTexture interface.
Fixed IQueryObject for GPU Elapsed Time (was wrongly measuring XFormFeedback primitives instead).

--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -711,6 +711,8 @@
 		<Unit filename="COpenGL3DTexture.cpp" />
 		<Unit filename="COpenGL3DTexture.h" />
 		<Unit filename="COpenGLBuffer.h" />
+		<Unit filename="COpenGLCubemapTexture.cpp" />
+		<Unit filename="COpenGLCubemapTexture.h" />
 		<Unit filename="COpenGLDriver.cpp" />
 		<Unit filename="COpenGLDriver.h" />
 		<Unit filename="COpenGLDriverFence.h" />
