--- a/source/Irrlicht/Irrlicht-gcc.cbp
+++ b/source/Irrlicht/Irrlicht-gcc.cbp
@@ -505,6 +505,7 @@
 		<Unit filename="../../include/IMeshSceneNodeInstanced.h" />
 		<Unit filename="../../include/IMeshWriter.h" />
 		<Unit filename="../../include/IMetaGranularBuffer.h" />
+		<Unit filename="../../include/IMultisampleTexture.h" />
 		<Unit filename="../../include/IOSOperator.h" />
 		<Unit filename="../../include/IOcclusionQuery.h" />
 		<Unit filename="../../include/IQueryObject.h" />
@@ -724,6 +725,10 @@
 		<Unit filename="COpenGLExtensionHandler.h" />
 		<Unit filename="COpenGLFrameBuffer.cpp" />
 		<Unit filename="COpenGLFrameBuffer.h" />
+		<Unit filename="COpenGLMultisampleTexture.cpp" />
+		<Unit filename="COpenGLMultisampleTexture.h" />
+		<Unit filename="COpenGLMultisampleTextureArray.cpp" />
+		<Unit filename="COpenGLMultisampleTextureArray.h" />
 		<Unit filename="COpenGLOcclusionQuery.cpp" />
 		<Unit filename="COpenGLOcclusionQuery.h" />
 		<Unit filename="COpenGLPersistentlyMappedBuffer.cpp" />
