--- a/source/Irrlicht/Irrlicht10.0.vcxproj.filters
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj.filters
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="CBawFile.cpp" />
-    <ClCompile Include="CBAWMeshWriter.cpp" />
     <ClCompile Include="CDefaultSceneNodeAnimatorFactory.cpp" />
     <ClCompile Include="CDefaultSceneNodeFactory.cpp" />
     <ClCompile Include="CGeometryCreator.cpp" />
@@ -103,7 +101,6 @@
     <ClCompile Include="CTRTextureGouraudAddNoZ2.cpp" />
     <ClCompile Include="CTRTextureGouraudNoZ2.cpp" />
     <ClCompile Include="CTRTextureGouraudVertexAlpha2.cpp" />
-    <ClCompile Include="FW_Mutex.cpp" />
     <ClCompile Include="IBurningShader.cpp" />
     <ClCompile Include="CLogger.cpp" />
     <ClCompile Include="Irrlicht.cpp" />
@@ -213,7 +210,12 @@
     <ClCompile Include="CWADReader.cpp" />
     <ClCompile Include="CWriteFile.cpp" />
     <ClCompile Include="CZipReader.cpp" />
+    <ClCompile Include="FW_Mutex.cpp" />
+    <ClCompile Include="CBAWMeshWriter.cpp" />
     <ClCompile Include="CBAWMeshFileLoader.cpp" />
+    <ClCompile Include="CBAWFile.cpp" />
+    <ClCompile Include="blobsLoading.cpp" />
+    <ClCompile Include="CBlobsLoadingManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\EDriverFeatures.h" />
@@ -374,8 +376,6 @@
     <ClInclude Include="..\..\include\IGUITreeView.h" />
     <ClInclude Include="..\..\include\IGUIWindow.h" />
     <ClInclude Include="..\..\include\vectorSIMD.h" />
-    <ClInclude Include="CBawFile.h" />
-    <ClInclude Include="CBAWMeshWriter.h" />
     <ClInclude Include="CDefaultSceneNodeAnimatorFactory.h" />
     <ClInclude Include="CDefaultSceneNodeFactory.h" />
     <ClInclude Include="CGeometryCreator.h" />
@@ -392,7 +392,6 @@
     <ClInclude Include="COSOperator.h" />
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CSkinnedMeshSceneNode.h" />
-    <ClInclude Include="FW_Mutex.h" />
     <ClInclude Include="Octree.h" />
     <ClInclude Include="CSMFMeshFileLoader.h" />
     <ClInclude Include="C3DSMeshFileLoader.h" />
@@ -532,7 +531,7 @@
     <ClInclude Include="CXMLReaderImpl.h" />
     <ClInclude Include="CZipReader.h" />
     <ClInclude Include="IAttribute.h" />
-    <ClInclude Include="CBAWMeshFileLoader.h" />
+    <ClInclude Include="FW_Mutex.h" />
   </ItemGroup>
   <ItemGroup>
     <Library Include="clwinlib\OpenCL.lib" />
