--- a/source/Irrlicht/Irrlicht10.0.vcxproj
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj
@@ -945,6 +945,8 @@
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CSkinnedMeshSceneNode.h" />
     <ClInclude Include="FW_Mutex.h" />
+    <ClInclude Include="lzma\Compiler.h" />
+    <ClInclude Include="lzma\Precomp.h" />
     <ClInclude Include="Octree.h" />
     <ClInclude Include="CSMFMeshFileLoader.h" />
     <ClInclude Include="C3DSMeshFileLoader.h" />
@@ -1107,7 +1109,7 @@
     <None Include="..\..\readme.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="blobsLoading.cpp" />
+    <ClCompile Include="bzip2\compress.c" />
     <ClCompile Include="CBAWFile.cpp" />
     <ClCompile Include="CBAWMeshFileLoader.cpp" />
     <ClCompile Include="CBAWMeshWriter.cpp" />
@@ -1263,11 +1265,16 @@
     <ClCompile Include="IBurningShader.cpp" />
     <ClCompile Include="CLogger.cpp" />
     <ClCompile Include="Irrlicht.cpp" />
+    <ClCompile Include="lz4\lz4.c" />
+    <ClCompile Include="lz4\lz4frame.c" />
+    <ClCompile Include="lz4\lz4hc.c" />
+    <ClCompile Include="lz4\xxhash.c" />
     <ClCompile Include="os.cpp" />
     <ClCompile Include="lzma\LzmaDec.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Static lib - Debug - Server|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="STextureSamplingParams.cpp" />
+    <ClCompile Include="TypedBlob.cpp" />
     <ClCompile Include="zlib\adler32.c" />
     <ClCompile Include="zlib\compress.c" />
     <ClCompile Include="zlib\crc32.c" />
@@ -1349,7 +1356,6 @@
     <ClCompile Include="aesGladman\sha1.cpp" />
     <ClCompile Include="aesGladman\sha2.cpp" />
     <ClCompile Include="bzip2\blocksort.c" />
-    <ClCompile Include="bzip2\bzcompress.c" />
     <ClCompile Include="bzip2\bzlib.c" />
     <ClCompile Include="bzip2\crctable.c" />
     <ClCompile Include="bzip2\decompress.c" />
