Update lzma again because i'm stupid

--- a/source/Irrlicht/Irrlicht10.0.vcxproj
+++ b/source/Irrlicht/Irrlicht10.0.vcxproj
@@ -945,8 +945,14 @@
     <ClInclude Include="CSceneManager.h" />
     <ClInclude Include="CSkinnedMeshSceneNode.h" />
     <ClInclude Include="FW_Mutex.h" />
+    <ClInclude Include="lzma\7zTypes.h" />
     <ClInclude Include="lzma\Compiler.h" />
+    <ClInclude Include="lzma\LzFind.h" />
+    <ClInclude Include="lzma\LzFindMt.h" />
+    <ClInclude Include="lzma\LzHash.h" />
+    <ClInclude Include="lzma\LzmaEnc.h" />
     <ClInclude Include="lzma\Precomp.h" />
+    <ClInclude Include="lzma\Threads.h" />
     <ClInclude Include="Octree.h" />
     <ClInclude Include="CSMFMeshFileLoader.h" />
     <ClInclude Include="C3DSMeshFileLoader.h" />
@@ -1052,7 +1058,6 @@
     <ClInclude Include="lzma\LzmaDec.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Static lib - Debug - Server|x64'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="lzma\Types.h" />
     <ClInclude Include="zlib\crc32.h" />
     <ClInclude Include="zlib\deflate.h" />
     <ClInclude Include="zlib\inffast.h" />
@@ -1269,6 +1274,10 @@
     <ClCompile Include="lz4\lz4frame.c" />
     <ClCompile Include="lz4\lz4hc.c" />
     <ClCompile Include="lz4\xxhash.c" />
+    <ClCompile Include="lzma\LzFind.c" />
+    <ClCompile Include="lzma\LzFindMt.c" />
+    <ClCompile Include="lzma\LzmaEnc.c" />
+    <ClCompile Include="lzma\Threads.c" />
     <ClCompile Include="os.cpp" />
     <ClCompile Include="lzma\LzmaDec.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Static lib - Debug - Server|x64'">true</ExcludedFromBuild>
@@ -1276,7 +1285,7 @@
     <ClCompile Include="STextureSamplingParams.cpp" />
     <ClCompile Include="TypedBlob.cpp" />
     <ClCompile Include="zlib\adler32.c" />
-    <ClCompile Include="zlib\compress.c" />
+    <ClCompile Include="zlib\zcompress.c" />
     <ClCompile Include="zlib\crc32.c" />
     <ClCompile Include="zlib\deflate.c" />
     <ClCompile Include="zlib\inffast.c" />
